# nstream

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: FUNDING.yml
CLI/: Cargo.toml
CLI/src/: cmd.rs  main.rs
Core/: Cargo.toml  build.rs
Core/src/: lib.rs  tun.rs  utun.rs  vtun.rs  vtun_conf.rs
Core/src/darwin_syscall/: utun_ifname.c  utun_ifname.h
Core/src/ifname/: ifname.c  ifname.h
Socks5/: Cargo.toml
Socks5/src/: lib.rs
Socks5/src/protocol/: addr.rs  atyp.rs  cmd.rs  handreq.rs  handresp.rs  method.rs  mod.rs  rep.rs  rep_resp.rs  represp.rs  tellreq.rs  udp_pack.rs  upauth.rs  upauthret.rs
app/android/: build.gradle
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/liangchengj/app/: MainActivity.java
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner.xcodeproj/: project.pbxproj
app/linux/: CMakeLists.txt
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
