[package]
name = "nstream-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.138"
maxminddb = { version = "0.23.0" }
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"
hyper = { version = "0.14.23", features = ["http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
serde_json = "1.0.91"
