[package]
name = "nstream-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.138"
maxminddb = "0.27.1"
lazy_static = "1.4.0"
stunclient = "0.4.2"
tokio = "1.23.0"
# socket2 = "0.6.1"

[build-dependencies]
cc = "1.0"
hyper = { version = "0.14.23", features = ["http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
serde_json = "1.0.91"
